# FactoryTest2

./: CMakeLists.txt  main.cpp  numbers.txt
